@@ -3,6 +3,7 @@ package com.uima.event_app;
 import android.content.Intent;
 import android.os.Bundle;
 import android.support.v4.app.Fragment;
+import android.support.v4.app.FragmentManager;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
@@ -14,6 +15,7 @@ import com.google.android.gms.maps.MapsInitializer;
 import com.google.android.gms.maps.OnMapReadyCallback;
 import com.google.android.gms.maps.model.CameraPosition;
 import com.google.android.gms.maps.model.LatLng;
+import com.google.android.gms.maps.model.Marker;
 import com.google.android.gms.maps.model.MarkerOptions;
 import com.google.firebase.database.DataSnapshot;
 import com.google.firebase.database.DatabaseError;
@@ -95,6 +97,34 @@ public class EventMapFragment extends Fragment implements OnMapReadyCallback {
         CameraPosition Baltimore = CameraPosition.builder().target(baltimore).zoom(12).bearing(0).tilt(45).build();
         mGoogleMap.moveCamera(CameraUpdateFactory.newCameraPosition(Baltimore));
         myRef = database.getReference().child("events");
+        mGoogleMap.setOnMarkerClickListener(new GoogleMap.OnMarkerClickListener() {
+            @Override
+            public boolean onMarkerClick(Marker marker) {
+                final String title = marker.getTitle();
+                myRef.addValueEventListener(new ValueEventListener() {
+                    @Override
+                    public void onDataChange(DataSnapshot dataSnapshot) {
+                        Iterable<DataSnapshot> children = dataSnapshot.getChildren();
+                        for (DataSnapshot child : children) {
+                            Event value = child.getValue(Event.class);
+                            if (value.getName().equalsIgnoreCase(title)) {
+                                FragmentManager fragmentManager = getActivity().getSupportFragmentManager();
+                                Fragment currentFragment = new EventPageFragment();
+                                fragmentManager.beginTransaction()
+                                        .replace(R.id.content_frame, currentFragment)
+                                        .commit();
+                            }
+                        }
+                    }
+
+                    @Override
+                    public void onCancelled(DatabaseError databaseError) {
+
+                    }
+                });
+                return false;
+            }
+        });
 
         myRef.addValueEventListener(new ValueEventListener() {
             @Override
@@ -104,15 +134,20 @@ public class EventMapFragment extends Fragment implements OnMapReadyCallback {
                 for (DataSnapshot child : children) {
                     Event value = child.getValue(Event.class);
                     System.out.println(value.getName());
-                    Double ilat = new Double(value.getLatutude());
-                    Double ilog = new Double(value.getLongitude());
-                    if (ilat == 0) {
-                        ilat = 39.0;
+                    String ilat = value.getLatutude();
+                    String ilog = value.getLongitude();
+                    Double dlat, dlog;
+                    if (ilat.equals("")) {
+                        dlat = 39.0;
+                    } else {
+                        dlat = Double.valueOf(ilat);
                     }
-                    if (ilog == 0) {
-                        ilog = -76.0;
+                    if (ilog.equals("")) {
+                        dlog = -76.0;
+                    } else {
+                        dlog = Double.valueOf(ilog);
                     }
-                    LatLng itemp = new LatLng(ilat, ilog);
+                    LatLng itemp = new LatLng(dlat, dlog);
                     mGoogleMap.addMarker(new MarkerOptions().position(itemp).title(value.getName()));
 
                 }
